@@ -45,9 +45,15 @@ import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.clients.producer.RecordMetadata;
 import org.apache.kafka.common.header.Header;
 import org.apache.kafka.common.header.Headers;
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+
+import static org.apache.camel.test.junit5.TestSupport.assertIsInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
@@ -58,6 +64,7 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
     private static final String TOPIC_BYTES_IN_HEADER = "testBytesHeader";
     private static final String GROUP_BYTES = "groupStrings";
     private static final String TOPIC_PROPAGATED_HEADERS = "testPropagatedHeaders";
+    private static final String TOPIC_NO_RECORD_SPECIFIC_HEADERS = "noRecordSpecificHeaders";
 
     private static KafkaConsumer<String, String> stringsConsumerConn;
     private static KafkaConsumer<byte[], byte[]> bytesConsumerConn;
@@ -68,20 +75,21 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
     @EndpointInject("kafka:" + TOPIC_STRINGS + "?requestRequiredAcks=-1&partitionKey=1")
     private Endpoint toStrings2;
 
-    @EndpointInject("kafka:" + TOPIC_INTERCEPTED + "?requestRequiredAcks=-1"
-            + "&interceptorClasses=org.apache.camel.component.kafka.MockProducerInterceptor")
+    @EndpointInject("kafka:" + TOPIC_INTERCEPTED + "?requestRequiredAcks=-1" + "&interceptorClasses=org.apache.camel.component.kafka.MockProducerInterceptor")
     private Endpoint toStringsWithInterceptor;
 
     @EndpointInject("mock:kafkaAck")
     private MockEndpoint mockEndpoint;
 
-    @EndpointInject("kafka:" + TOPIC_BYTES + "?requestRequiredAcks=-1"
-            + "&serializerClass=org.apache.kafka.common.serialization.ByteArraySerializer&"
-            + "keySerializerClass=org.apache.kafka.common.serialization.ByteArraySerializer")
+    @EndpointInject("kafka:" + TOPIC_BYTES + "?requestRequiredAcks=-1" + "&serializerClass=org.apache.kafka.common.serialization.ByteArraySerializer&"
+                    + "keySerializerClass=org.apache.kafka.common.serialization.ByteArraySerializer")
     private Endpoint toBytes;
 
     @EndpointInject("kafka:" + TOPIC_PROPAGATED_HEADERS + "?requestRequiredAcks=-1")
     private Endpoint toPropagatedHeaders;
+
+    @EndpointInject("kafka:" + TOPIC_NO_RECORD_SPECIFIC_HEADERS + "?requestRequiredAcks=-1")
+    private Endpoint toNoRecordSpecificHeaders;
 
     @Produce("direct:startStrings")
     private ProducerTemplate stringsTemplate;
@@ -97,39 +105,32 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
     @Produce("direct:propagatedHeaders")
     private ProducerTemplate propagatedHeadersTemplate;
-    
+
+    @Produce("direct:noRecordSpecificHeaders")
+    private ProducerTemplate noRecordSpecificHeadersTemplate;
+
     @BindToRegistry("myStrategy")
     private MyHeaderFilterStrategy strategy = new MyHeaderFilterStrategy();
-    
+
     @BindToRegistry("myHeaderSerializer")
     private MyKafkaHeadersSerializer serializer = new MyKafkaHeadersSerializer();
 
-    @BeforeClass
+    @BeforeAll
     public static void before() {
-        Properties stringsProps = new Properties();
-
-        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, "localhost:" + getKafkaPort());
-        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.GROUP_ID_CONFIG, "DemoConsumer");
-        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG, "true");
-        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.AUTO_COMMIT_INTERVAL_MS_CONFIG, "1000");
-        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.SESSION_TIMEOUT_MS_CONFIG, "30000");
-        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.StringDeserializer");
-        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.StringDeserializer");
-        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.AUTO_OFFSET_RESET_CONFIG, "earliest");
-        stringsConsumerConn = new KafkaConsumer<>(stringsProps);
-
-        Properties bytesProps = new Properties();
-        bytesProps.putAll(stringsProps);
-        bytesProps.put("group.id", GROUP_BYTES);
-        bytesProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.ByteArrayDeserializer");
-        bytesProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.ByteArrayDeserializer");
-        bytesConsumerConn = new KafkaConsumer<>(bytesProps);
+        stringsConsumerConn = createStringKafkaConsumer("DemoConsumer");
+        bytesConsumerConn = createByteKafkaConsumer(GROUP_BYTES);
     }
 
-    @AfterClass
+    @AfterAll
     public static void after() {
-        stringsConsumerConn.close();
-        bytesConsumerConn.close();
+        // clean all test topics
+        final List<String> topics = new ArrayList<>();
+        topics.add(TOPIC_BYTES);
+        topics.add(TOPIC_INTERCEPTED);
+        topics.add(TOPIC_PROPAGATED_HEADERS);
+        topics.add(TOPIC_STRINGS);
+
+        kafkaAdminClient.deleteTopics(topics);
     }
 
     @Override
@@ -146,6 +147,8 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
                 from("direct:startTraced").to(toStringsWithInterceptor).to(mockEndpoint);
 
                 from("direct:propagatedHeaders").to(toPropagatedHeaders).to(mockEndpoint);
+
+                from("direct:noRecordSpecificHeaders").to(toNoRecordSpecificHeaders).to(mockEndpoint);
             }
         };
     }
@@ -158,22 +161,23 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
         CountDownLatch messagesLatch = new CountDownLatch(messageInTopic + messageInOtherTopic);
 
         sendMessagesInRoute(messageInTopic, stringsTemplate, "IT test message", KafkaConstants.PARTITION_KEY, "1");
-        sendMessagesInRoute(messageInOtherTopic, stringsTemplate, "IT test message in other topic", KafkaConstants.PARTITION_KEY, "1", KafkaConstants.TOPIC, TOPIC_STRINGS_IN_HEADER);
+        sendMessagesInRoute(messageInOtherTopic, stringsTemplate, "IT test message in other topic", KafkaConstants.PARTITION_KEY, "1", KafkaConstants.TOPIC,
+                            TOPIC_STRINGS_IN_HEADER);
 
         createKafkaMessageConsumer(stringsConsumerConn, TOPIC_STRINGS, TOPIC_STRINGS_IN_HEADER, messagesLatch);
 
         boolean allMessagesReceived = messagesLatch.await(200, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         List<Exchange> exchangeList = mockEndpoint.getExchanges();
-        assertEquals("Fifteen Exchanges are expected", exchangeList.size(), 15);
+        assertEquals(exchangeList.size(), 15, "Fifteen Exchanges are expected");
         for (Exchange exchange : exchangeList) {
             @SuppressWarnings("unchecked")
-            List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>) (exchange.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
-            assertEquals("One RecordMetadata is expected.", recordMetaData1.size(), 1);
-            assertTrue("Offset is positive", recordMetaData1.get(0).offset() >= 0);
-            assertTrue("Topic Name start with 'test'", recordMetaData1.get(0).topic().startsWith("test"));
+            List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>)(exchange.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
+            assertEquals(recordMetaData1.size(), 1, "One RecordMetadata is expected.");
+            assertTrue(recordMetaData1.get(0).offset() >= 0, "Offset is positive");
+            assertTrue(recordMetaData1.get(0).topic().startsWith("test"), "Topic Name start with 'test'");
         }
     }
 
@@ -184,23 +188,24 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
         CountDownLatch messagesLatch = new CountDownLatch(messageInTopic + messageInOtherTopic);
 
-        sendMessagesInRoute(messageInTopic, stringsTemplate2, "IT test message", (String[]) null);
-        sendMessagesInRoute(messageInOtherTopic, stringsTemplate2, "IT test message in other topic", KafkaConstants.PARTITION_KEY, "1", KafkaConstants.TOPIC, TOPIC_STRINGS_IN_HEADER);
+        sendMessagesInRoute(messageInTopic, stringsTemplate2, "IT test message", (String[])null);
+        sendMessagesInRoute(messageInOtherTopic, stringsTemplate2, "IT test message in other topic", KafkaConstants.PARTITION_KEY, "1", KafkaConstants.TOPIC,
+                            TOPIC_STRINGS_IN_HEADER);
 
         createKafkaMessageConsumer(stringsConsumerConn, TOPIC_STRINGS, TOPIC_STRINGS_IN_HEADER, messagesLatch);
 
         boolean allMessagesReceived = messagesLatch.await(200, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         List<Exchange> exchangeList = mockEndpoint.getExchanges();
-        assertEquals("Fifteen Exchanges are expected", exchangeList.size(), 15);
+        assertEquals(exchangeList.size(), 15, "Fifteen Exchanges are expected");
         for (Exchange exchange : exchangeList) {
             @SuppressWarnings("unchecked")
-            List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>) (exchange.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
-            assertEquals("One RecordMetadata is expected.", recordMetaData1.size(), 1);
-            assertTrue("Offset is positive", recordMetaData1.get(0).offset() >= 0);
-            assertTrue("Topic Name start with 'test'", recordMetaData1.get(0).topic().startsWith("test"));
+            List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>)(exchange.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
+            assertEquals(1, recordMetaData1.size(), "One RecordMetadata is expected.");
+            assertTrue(recordMetaData1.get(0).offset() >= 0, "Offset is positive");
+            assertTrue(recordMetaData1.get(0).topic().startsWith("test"), "Topic Name start with 'test'");
         }
     }
 
@@ -212,12 +217,13 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
         CountDownLatch messagesLatch = new CountDownLatch(messageInTopic + messageInOtherTopic);
 
         sendMessagesInRoute(messageInTopic, interceptedTemplate, "IT test message", KafkaConstants.PARTITION_KEY, "1");
-        sendMessagesInRoute(messageInOtherTopic, interceptedTemplate, "IT test message in other topic", KafkaConstants.PARTITION_KEY, "1", KafkaConstants.TOPIC, TOPIC_STRINGS_IN_HEADER);
+        sendMessagesInRoute(messageInOtherTopic, interceptedTemplate, "IT test message in other topic", KafkaConstants.PARTITION_KEY, "1", KafkaConstants.TOPIC,
+                            TOPIC_STRINGS_IN_HEADER);
         createKafkaMessageConsumer(stringsConsumerConn, TOPIC_INTERCEPTED, TOPIC_STRINGS_IN_HEADER, messagesLatch);
 
         boolean allMessagesReceived = messagesLatch.await(200, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         assertEquals(messageInTopic + messageInOtherTopic, MockProducerInterceptor.recordsCaptured.size());
     }
@@ -245,24 +251,24 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
         boolean allMessagesReceived = messagesLatch.await(200, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
         List<Exchange> exchangeList = mockEndpoint.getExchanges();
-        assertEquals("Two Exchanges are expected", exchangeList.size(), 2);
+        assertEquals(2, exchangeList.size(), "Two Exchanges are expected");
         Exchange e1 = exchangeList.get(0);
         @SuppressWarnings("unchecked")
-        List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>) (e1.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
-        assertEquals("Ten RecordMetadata is expected.", recordMetaData1.size(), 10);
+        List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>)(e1.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
+        assertEquals(10, recordMetaData1.size(), "Ten RecordMetadata is expected.");
         for (RecordMetadata recordMeta : recordMetaData1) {
-            assertTrue("Offset is positive", recordMeta.offset() >= 0);
-            assertTrue("Topic Name start with 'test'", recordMeta.topic().startsWith("test"));
+            assertTrue(recordMeta.offset() >= 0, "Offset is positive");
+            assertTrue(recordMeta.topic().startsWith("test"), "Topic Name start with 'test'");
         }
         Exchange e2 = exchangeList.get(1);
         @SuppressWarnings("unchecked")
-        List<RecordMetadata> recordMetaData2 = (List<RecordMetadata>) (e2.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
-        assertEquals("Five RecordMetadata is expected.", recordMetaData2.size(), 5);
+        List<RecordMetadata> recordMetaData2 = (List<RecordMetadata>)(e2.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
+        assertEquals(5, recordMetaData2.size(), "Five RecordMetadata is expected.");
         for (RecordMetadata recordMeta : recordMetaData2) {
-            assertTrue("Offset is positive", recordMeta.offset() >= 0);
-            assertTrue("Topic Name start with 'test'", recordMeta.topic().startsWith("test"));
+            assertTrue(recordMeta.offset() >= 0, "Offset is positive");
+            assertTrue(recordMeta.topic().startsWith("test"), "Topic Name start with 'test'");
         }
     }
 
@@ -286,16 +292,16 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
         boolean allMessagesReceived = messagesLatch.await(200, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         List<Exchange> exchangeList = mockEndpoint.getExchanges();
-        assertEquals("Fifteen Exchanges are expected", exchangeList.size(), 15);
+        assertEquals(exchangeList.size(), 15, "Fifteen Exchanges are expected");
         for (Exchange exchange : exchangeList) {
             @SuppressWarnings("unchecked")
-            List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>) (exchange.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
-            assertEquals("One RecordMetadata is expected.", recordMetaData1.size(), 1);
-            assertTrue("Offset is positive", recordMetaData1.get(0).offset() >= 0);
-            assertTrue("Topic Name start with 'test'", recordMetaData1.get(0).topic().startsWith("test"));
+            List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>)(exchange.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
+            assertEquals(1, recordMetaData1.size(), "One RecordMetadata is expected.");
+            assertTrue(recordMetaData1.get(0).offset() >= 0, "Offset is positive");
+            assertTrue(recordMetaData1.get(0).topic().startsWith("test"), "Topic Name start with 'test'");
         }
     }
 
@@ -314,7 +320,7 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
         Double propagatedDoubleHeaderValue = 43434.545D;
 
         String propagatedBytesHeaderKey = "PROPAGATED_BYTES_HEADER";
-        byte[] propagatedBytesHeaderValue = new byte[]{121, 34, 34, 54, 5, 3, 54, -34};
+        byte[] propagatedBytesHeaderValue = new byte[] {121, 34, 34, 54, 5, 3, 54, -34};
 
         String propagatedBooleanHeaderKey = "PROPAGATED_BOOLEAN_HEADER";
         Boolean propagatedBooleanHeaderValue = Boolean.TRUE;
@@ -334,54 +340,96 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
         CountDownLatch messagesLatch = new CountDownLatch(1);
         propagatedHeadersTemplate.sendBodyAndHeaders("Some test message", camelHeaders);
 
-        List<ConsumerRecord<String, String>> records = pollForRecords(stringsConsumerConn, TOPIC_PROPAGATED_HEADERS, messagesLatch);
+        List<ConsumerRecord<String, String>> records = pollForRecords(createStringKafkaConsumer("propagatedHeaderConsumer"), TOPIC_PROPAGATED_HEADERS, messagesLatch);
         boolean allMessagesReceived = messagesLatch.await(10_000, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         ConsumerRecord<String, String> record = records.get(0);
         Headers headers = record.headers();
-        assertNotNull("Kafka Headers should not be null.", headers);
+        assertNotNull(headers, "Kafka Headers should not be null.");
         // we have 6 headers
-        assertEquals("6 propagated header is expected.", 6, headers.toArray().length);
-        assertEquals("Propagated string value received", propagatedStringHeaderValue,
-                new String(getHeaderValue(propagatedStringHeaderKey, headers)));
-        assertEquals("Propagated integer value received", propagatedIntegerHeaderValue,
-                new Integer(ByteBuffer.wrap(getHeaderValue(propagatedIntegerHeaderKey, headers)).getInt()));
-        assertEquals("Propagated long value received", propagatedLongHeaderValue,
-                new Long(ByteBuffer.wrap(getHeaderValue(propagatedLongHeaderKey, headers)).getLong()));
-        assertEquals("Propagated double value received", propagatedDoubleHeaderValue,
-                new Double(ByteBuffer.wrap(getHeaderValue(propagatedDoubleHeaderKey, headers)).getDouble()));
-        assertArrayEquals("Propagated byte array value received", propagatedBytesHeaderValue, getHeaderValue(propagatedBytesHeaderKey, headers));
-        assertEquals("Propagated boolean value received", propagatedBooleanHeaderValue,
-                Boolean.valueOf(new String(getHeaderValue(propagatedBooleanHeaderKey, headers))));
+        assertEquals(6, headers.toArray().length, "6 propagated header is expected.");
+        assertEquals(propagatedStringHeaderValue, new String(getHeaderValue(propagatedStringHeaderKey, headers)), "Propagated string value received");
+        assertEquals(propagatedIntegerHeaderValue, Integer.valueOf(ByteBuffer.wrap(getHeaderValue(propagatedIntegerHeaderKey, headers)).getInt()), "Propagated integer value received");
+        assertEquals(propagatedLongHeaderValue, Long.valueOf(ByteBuffer.wrap(getHeaderValue(propagatedLongHeaderKey, headers)).getLong()), "Propagated long value received");
+        assertEquals(propagatedDoubleHeaderValue, Double.valueOf(ByteBuffer.wrap(getHeaderValue(propagatedDoubleHeaderKey, headers)).getDouble()), "Propagated double value received");
+        assertArrayEquals(propagatedBytesHeaderValue, getHeaderValue(propagatedBytesHeaderKey, headers), "Propagated byte array value received");
+        assertEquals(propagatedBooleanHeaderValue, Boolean.valueOf(new String(getHeaderValue(propagatedBooleanHeaderKey, headers))), "Propagated boolean value received");
+    }
+
+    @Test
+    public void recordSpecificHeaderIsNotReceivedByKafka() throws Exception {
+        String propagatedStringHeaderKey = KafkaConstants.TOPIC;
+        String propagatedStringHeaderValue = "source topic";
+
+        Map<String, Object> camelHeaders = new HashMap<>();
+        camelHeaders.put(propagatedStringHeaderKey, propagatedStringHeaderValue);
+
+        CountDownLatch messagesLatch = new CountDownLatch(1);
+        noRecordSpecificHeadersTemplate.sendBodyAndHeaders("Some test message", camelHeaders);
+
+        List<ConsumerRecord<String, String>> records = pollForRecords(createStringKafkaConsumer("noRecordSpecificHeadersConsumer"), TOPIC_NO_RECORD_SPECIFIC_HEADERS, messagesLatch);
+        boolean allMessagesReceived = messagesLatch.await(10_000, TimeUnit.MILLISECONDS);
+
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
+
+        ConsumerRecord<String, String> record = records.get(0);
+        Headers headers = record.headers();
+        assertNotNull(headers, "Kafka Headers should not be null.");
+        // we have 0 headers
+        assertEquals(0, headers.toArray().length, "0 propagated headers are expected");
     }
 
     @Test
     public void headerFilterStrategyCouldBeOverridden() {
-        KafkaEndpoint kafkaEndpoint = context.getEndpoint(
-                "kafka:TOPIC_PROPAGATED_HEADERS?headerFilterStrategy=#myStrategy", KafkaEndpoint.class);
+        KafkaEndpoint kafkaEndpoint = context.getEndpoint("kafka:TOPIC_PROPAGATED_HEADERS?headerFilterStrategy=#myStrategy", KafkaEndpoint.class);
         assertIsInstanceOf(MyHeaderFilterStrategy.class, kafkaEndpoint.getConfiguration().getHeaderFilterStrategy());
     }
 
     @Test
     public void headerSerializerCouldBeOverridden() {
-        KafkaEndpoint kafkaEndpoint = context.getEndpoint(
-                "kafka:TOPIC_PROPAGATED_HEADERS?kafkaHeaderSerializer=#myHeaderSerializer", KafkaEndpoint.class);
+        KafkaEndpoint kafkaEndpoint = context.getEndpoint("kafka:TOPIC_PROPAGATED_HEADERS?kafkaHeaderSerializer=#myHeaderSerializer", KafkaEndpoint.class);
         assertIsInstanceOf(MyKafkaHeadersSerializer.class, kafkaEndpoint.getConfiguration().getKafkaHeaderSerializer());
     }
 
     private byte[] getHeaderValue(String headerKey, Headers headers) {
-        Header foundHeader = StreamSupport.stream(headers.spliterator(), false)
-                .filter(header -> header.key().equals(headerKey))
-                .findFirst()
-                .orElse(null);
-        assertNotNull("Header should be sent", foundHeader);
+        Header foundHeader = StreamSupport.stream(headers.spliterator(), false).filter(header -> header.key().equals(headerKey)).findFirst().orElse(null);
+        assertNotNull(foundHeader, "Header should be sent");
         return foundHeader.value();
     }
 
-    private List<ConsumerRecord<String, String>> pollForRecords(KafkaConsumer<String, String> consumerConn,
-                                                                String topic, CountDownLatch messagesLatch) {
+    private static KafkaConsumer<String, String> createStringKafkaConsumer(final String groupId) {
+        Properties stringsProps = new Properties();
+
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, getBootstrapServers());
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.GROUP_ID_CONFIG, groupId);
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG, "true");
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.AUTO_COMMIT_INTERVAL_MS_CONFIG, "1000");
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.SESSION_TIMEOUT_MS_CONFIG, "30000");
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.StringDeserializer");
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.StringDeserializer");
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.AUTO_OFFSET_RESET_CONFIG, "earliest");
+
+        return new KafkaConsumer<>(stringsProps);
+    }
+
+    private static KafkaConsumer<byte[], byte[]> createByteKafkaConsumer(final String groupId) {
+        Properties stringsProps = new Properties();
+
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, getBootstrapServers());
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.GROUP_ID_CONFIG, groupId);
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG, "true");
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.AUTO_COMMIT_INTERVAL_MS_CONFIG, "1000");
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.SESSION_TIMEOUT_MS_CONFIG, "30000");
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.ByteArrayDeserializer");
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.ByteArrayDeserializer");
+        stringsProps.put(org.apache.kafka.clients.consumer.ConsumerConfig.AUTO_OFFSET_RESET_CONFIG, "earliest");
+
+        return new KafkaConsumer<>(stringsProps);
+    }
+
+    private List<ConsumerRecord<String, String>> pollForRecords(KafkaConsumer<String, String> consumerConn, String topic, CountDownLatch messagesLatch) {
 
         List<ConsumerRecord<String, String>> consumedRecords = new ArrayList<>();
         consumerConn.subscribe(Collections.singletonList(topic));
@@ -398,8 +446,7 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
         return consumedRecords;
     }
 
-    private void createKafkaMessageConsumer(KafkaConsumer<String, String> consumerConn,
-                                            String topic, String topicInHeader, CountDownLatch messagesLatch) {
+    private void createKafkaMessageConsumer(KafkaConsumer<String, String> consumerConn, String topic, String topicInHeader, CountDownLatch messagesLatch) {
 
         consumerConn.subscribe(Arrays.asList(topic, topicInHeader));
         boolean run = true;
@@ -416,8 +463,7 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
     }
 
-    private void createKafkaBytesMessageConsumer(KafkaConsumer<byte[], byte[]> consumerConn, String topic,
-                                                 String topicInHeader, CountDownLatch messagesLatch) {
+    private void createKafkaBytesMessageConsumer(KafkaConsumer<byte[], byte[]> consumerConn, String topic, String topicInHeader, CountDownLatch messagesLatch) {
 
         consumerConn.subscribe(Arrays.asList(topic, topicInHeader));
         boolean run = true;
